--- a/不定长顺序表/不定长顺序表.vcxproj
+++ b/不定长顺序表/不定长顺序表.vcxproj
@@ -142,6 +142,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DSEQ_LIST.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="DSEQ_LIST.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
